correção do footer e mensagem de ja logado

--- a/config/locales/pt-BR.yml
+++ b/config/locales/pt-BR.yml
@@ -149,6 +149,7 @@ pt-BR:
     failure:
       user:
         unauthenticated: "Você precisa estar logado."
+        already_authenticated: "Você já está logado."
     registrations:
       user:
         signed_up: "Cadastro feito com sucesso."
